[BEAN] primitives wrapper tests